starting implementation of the program generator